@@ -1,5 +1,6 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2005/04/10 01:01:33 minskim Exp $
+@comment $NetBSD: PLIST,v 1.2 2005/08/18 05:43:32 jlam Exp $
 bin/gem
+bin/gem_mirror
 bin/gem_server
 bin/gemwhich
 bin/generate_yaml_index.rb
@@ -19,6 +20,7 @@ ${RUBY_SITELIBDIR}/rubygems/deployment.rb
 ${RUBY_SITELIBDIR}/rubygems/doc_manager.rb
 ${RUBY_SITELIBDIR}/rubygems/format.rb
 ${RUBY_SITELIBDIR}/rubygems/gem_commands.rb
+${RUBY_SITELIBDIR}/rubygems/gem_openssl.rb
 ${RUBY_SITELIBDIR}/rubygems/gem_runner.rb
 ${RUBY_SITELIBDIR}/rubygems/installer.rb
 ${RUBY_SITELIBDIR}/rubygems/loadpath_manager.rb
@@ -27,6 +29,7 @@ ${RUBY_SITELIBDIR}/rubygems/open-uri.rb
 ${RUBY_SITELIBDIR}/rubygems/package.rb
 ${RUBY_SITELIBDIR}/rubygems/remote_installer.rb
 ${RUBY_SITELIBDIR}/rubygems/rubygems_version.rb
+${RUBY_SITELIBDIR}/rubygems/security.rb
 ${RUBY_SITELIBDIR}/rubygems/source_index.rb
 ${RUBY_SITELIBDIR}/rubygems/specification.rb
 ${RUBY_SITELIBDIR}/rubygems/timer.rb
