@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.1.1.1 2005/04/10 01:01:33 minskim Exp $
+$NetBSD: distinfo,v 1.2 2005/08/18 05:43:32 jlam Exp $
 
-SHA1 (ruby/rubygems-0.8.10.tgz) = 9fb1f44ad07f94d81ce90ad10f8695658fc13543
-RMD160 (ruby/rubygems-0.8.10.tgz) = 713d0ba86b09d1efa2a0ad5748a2e4c5f7456db7
-Size (ruby/rubygems-0.8.10.tgz) = 147044 bytes
+SHA1 (ruby/rubygems-0.8.11.tgz) = 6a7d047349a073f24621e589f50a6a6548f943be
+RMD160 (ruby/rubygems-0.8.11.tgz) = 381ef7f088b3b439f28797d6d7a3257b3e28d6e4
+Size (ruby/rubygems-0.8.11.tgz) = 160265 bytes
